# location_based_series

./: MIGRATION_TO_DOCJS.md  README.md  WAREHOUSE_FILTERING.md  pyproject.toml  technical_handbook.md
location_based_series/: hooks.py  install.py  modules.txt  patches.txt  uninstall.py  utils.py
location_based_series/commands/: __init__.py  install_scripts.py  migrate_to_docjs.py
location_based_series/events/: client_scripts.py  naming.py  validation.py
location_based_series/fixtures/: custom_field.json  doctype.json
location_based_series/location_based_series/custom/: location.json
location_based_series/patches/: install_warehouse_filtering_scripts.py  override_posawesome.py  seed_dbn_cdn_counters.py
location_based_series/public/js/: delivery_note.js  location_utils.js  purchase_invoice.js  purchase_order.js  purchase_receipt.js  sales_invoice.js  sales_order.js
