[project]
name = "location_based_series"
authors = [
    { name = "Sagar", email = "sagar1ratan1garg1@gmail.com"}
]
description = "dds location-based naming conventions and validation for transactional documents like Sales and Purchase Invoices."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
